# leash

./: .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.linux-test  README.md
.github/workflows/: linux-sandbox.yml  release.yml  test.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: cli.rs  config.rs  error.rs  main.rs  sandbox.rs
cli/src/commands/: mod.rs  python.rs
examples/: basic.rs  debug_sandbox.rs  ipc_web_search.rs  minimal_test.rs  network_test.rs  proxy_filter.rs  python_sandbox.rs  security_test.rs  system_check.rs  test5_only.rs  test_all_hardware.rs  test_gpu.rs  test_hardware.rs  test_npu.rs  test_security.rs  trace_sandbox.rs
examples/scripts/: test_gpu.py  test_hardware.py  test_npu.py  test_security_denied.py
ipc/: CHANGELOG.md  Cargo.toml
ipc/src/: main.rs
nodejs/: CHANGELOG.md  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
nodejs/src/: child.rs  command.rs  config.rs  error.rs  ipc.rs  lib.rs  network.rs  python.rs  sandbox.rs  security.rs
src/: command.rs  config.rs  error.rs  lib.rs  pty.rs  sandbox.rs  security.rs  workdir.rs
src/ipc/: command.rs  mod.rs  protocol.rs  router.rs  server.rs
src/network/: mod.rs  policy.rs  proxy.rs
src/platform/: mod.rs  windows.rs
src/platform/linux/: landlock_rules.rs  mod.rs  seccomp_filter.rs
src/platform/macos/: ffi.rs  mod.rs  profile.rs
src/python/: mod.rs  venv.rs
templates/: sandbox.txt
templates/ipc/: leash_launcher.sh  wrapper_positional.sh  wrapper_primary_arg.sh  wrapper_simple.sh  wrapper_stdin.sh
