[package]
name = "native-sandbox"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Cross-platform native sandboxing library for running untrusted code"
keywords = ["sandbox", "security", "isolation", "python", "venv"]
categories = ["os", "development-tools"]

[features]
default = ["python"]
python = ["which"]

[dependencies]
# Error handling
thiserror = "2"

# Temporary files
tempfile = "3"

# Logging
tracing = "0.1"

# HTTP proxy
hyper = { version = "1", features = ["http1", "server", "client"] }
http-body-util = "0.1"
bytes = "1"

# Runtime-agnostic async (smol-based by default)
executor-core = { version = "0.7", features = ["async-executor", "std"] }
async-net = "2"
async-io = "2"
futures-lite = "2"

# Compile-time templates
askama = "0.12"

# Random number generation
rand = "0.8"

# Directory operations
remove_dir_all = "0.8"

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Python executable detection (optional)
[dependencies.which]
version = "7"
optional = true

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.4"
nix = { version = "0.29", features = ["process"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Isolation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
executor-core = { version = "0.7", features = ["tokio"] }
