[package]
name = "leash-ipc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI tool for IPC communication with leash sandbox"

[[bin]]
name = "leash-ipc"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
